@@ -9,6 +9,8 @@ LibPST 0.6.38 (2009-xx-xx)
     * removed contact->access_method since we don't have a mapi element for it.
     * changed pst_attach_to_mem to return pst_binary structure.
     * decode more recurrence mapi elements.
+    * change interfaces to be thread safe.
+    * readpst changes for parallel operation on multi processor machines.
 
 LibPST 0.6.37 (2009-04-17)
 ===============================
